[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Dawid"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
pytest = "^8.3.3"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
